test/corpus/basic.txt
================================================================================
Graph profile header
================================================================================

GCF profile=graph tool=context_for_task budget=5000 tokens=1847 symbols=2 edges=1
## targets
@0 fn pkg.Auth 0.78 lsp_resolved
## related
@1 fn pkg.Server 0.54 lsp_resolved
## edges [1]
@0<@1 calls

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name))
  (symbol_line
    (local_id
      (id_number))
    (kind)
    (qualified_name)
    (score)
    (provenance))
  (section_header
    (section_name))
  (symbol_line
    (local_id
      (id_number))
    (kind)
    (qualified_name)
    (score)
    (provenance))
  (section_header
    (section_name)
    (count_bracket
      (count_number)))
  (edge_line
    (target_ref
      (id_number))
    (source_ref
      (id_number))
    (edge_type)))

================================================================================
Generic tabular with inline schema
================================================================================

GCF profile=generic
## orders [2]{customer,id,total}
@0 ^{email,name,tier}|1|99.99
alice@test.com|Alice|premium
@1 ^|2|49.99
bob@test.com|Bob|standard

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name)
    (count_bracket
      (count_number))
    (field_decl
      (field_name)
      (field_name)
      (field_name)))
  (tabular_row)
  (tabular_row)
  (tabular_row)
  (tabular_row))

================================================================================
Generic key-value with attachment
================================================================================

GCF profile=generic
name=root
## children [1]{type,members}
@0 group|^
.members [2]{id,role}
    1|admin
    2|user

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (kv_line
    (kv_key)
    (kv_value))
  (section_header
    (section_name)
    (count_bracket
      (count_number))
    (field_decl
      (field_name)
      (field_name)))
  (tabular_row)
  (attachment_line
    (attachment_name)
    (attachment_array
      (count_bracket
        (count_number))
      (field_decl
        (field_name)
        (field_name))))
  (tabular_row)
  (tabular_row))

================================================================================
Root scalar
================================================================================

GCF profile=generic
=42

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (root_scalar
    (scalar_value)))

================================================================================
Summary trailer
================================================================================

##! summary counts=3,2

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (summary_line
    (kv_pair
      (kv_key)
      (kv_value))))

================================================================================
Generic-profile delta with identity field (Section 10a)
================================================================================

GCF profile=generic delta=true base_root=sha256:a new_root=sha256:b key=id
## added [1]{@id,total}
1004|75
## removed [1]{@id}
1001

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name)
    (count_bracket
      (count_number))
    (field_decl
      (identity_field
        (field_name))
      (field_name)))
  (tabular_row)
  (section_header
    (section_name)
    (count_bracket
      (count_number))
    (field_decl
      (identity_field
        (field_name))))
  (text_line
    (text_content)))

================================================================================
Graph delta added line with trailing distance (Section 10.1)
================================================================================

## added
@0 fn pkg.NewHandler 0.85 lsp 0

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (section_header
    (section_name))
  (symbol_line
    (local_id
      (id_number))
    (kind)
    (qualified_name)
    (score)
    (provenance)
    (distance)))

================================================================================
Graph delta removed and edge lines (Section 10.1)
================================================================================

## removed
fn pkg.OldHandler
## edges_added
pkg.Router -> pkg.NewHandler calls

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (section_header
    (section_name))
  (removed_line)
  (section_header
    (section_name))
  (delta_edge_line))

================================================================================
Symbol line with unknown kind (passed through verbatim, Section 5)
================================================================================

@0 widget pkg.Custom 0.80 ast

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (symbol_line
    (local_id
      (id_number))
    (kind)
    (qualified_name)
    (score)
    (provenance)))

================================================================================
Quoted key in a key-value line
================================================================================

"first name"=Alice

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (kv_line
    (kv_key
      (quoted_string))
    (kv_value)))

================================================================================
Root primitive array
================================================================================

## [3]: a,b,c

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (section_header
    (count_bracket
      (count_number))
    (inline_values)))

================================================================================
Nested section header with indentation
================================================================================

## level1
  a=1
  ## level2
    b=2

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (section_header
    (section_name))
  (indented_data)
  (section_header
    (section_name))
  (indented_data))

================================================================================
Scalar attachment (.field =value)
================================================================================

.field =hello

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (attachment_line
    (attachment_name)
    (scalar_value)))

================================================================================
Keyed-tabular map, anonymous root (SPEC 7.2a)
================================================================================

GCF profile=generic
## [2:]{key,cpu,status}
web-01|23|ok
db-01|41|warn

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number)
      (keyed_marker))
    (field_decl
      (field_name)
      (field_name)
      (field_name)))
  (tabular_row)
  (tabular_row))

================================================================================
Keyed-tabular map, named wrapper (SPEC 7.2a)
================================================================================

GCF profile=generic
## servers [2:]{key,cpu,mem}
web-01|23|61
db-01|41|83

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name)
    (count_bracket
      (count_number)
      (keyed_marker))
    (field_decl
      (field_name)
      (field_name)
      (field_name)))
  (tabular_row)
  (tabular_row))

================================================================================
Keyed-tabular map, streaming deferred count (SPEC 7.2a)
================================================================================

GCF profile=generic
## servers [?:]{key,cpu}
web-01|23
##! summary counts=1

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name)
    (count_bracket
      (deferred_marker)
      (keyed_marker))
    (field_decl
      (field_name)
      (field_name)))
  (tabular_row)
  (summary_line
    (kv_pair
      (kv_key)
      (kv_value))))

================================================================================
Caret attachment-marker row and its attachment (SPEC 7.4.4)
================================================================================

GCF profile=generic
## [1]{tags}
@0 ^
.tags [2]: a,b

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (field_name)))
  (expanded_item
    (local_id
      (id_number))
    (attachment_cell))
  (attachment_line
    (attachment_name)
    (attachment_array
      (count_bracket
        (count_number))
      (inline_values))))

================================================================================
Single-cell tabular rows: quoted value and non-ASCII value (SPEC 2.4)
================================================================================

GCF profile=generic
## [2]{v}
"true"
café

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (field_name)))
  (quoted_data_row)
  (text_line
    (text_content)))

================================================================================
Graph symbol and edge with non-ASCII fields and verbatim status (SPEC 5, 6)
================================================================================

GCF profile=graph tool=t symbols=1
## targets
@0 fn ௗpkg.h 0.95 lsp
## edges
@1<@0 calls active

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value))
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (section_name))
  (symbol_line
    (local_id
      (id_number))
    (kind)
    (qualified_name)
    (score)
    (provenance))
  (section_header
    (section_name))
  (edge_line
    (target_ref
      (id_number))
    (source_ref
      (id_number))
    (edge_type)
    (edge_status)))

================================================================================
Generic expanded row with bare/quoted positional value (SPEC 7.4)
================================================================================

GCF profile=generic
## [2]{"a,b"}
@0 0
."a>b" ="~"
@1 "@x"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (field_name
        (quoted_string))))
  (expanded_item
    (local_id
      (id_number))
    (expanded_value))
  (attachment_line
    (attachment_name
      (quoted_string))
    (scalar_value))
  (expanded_item
    (local_id
      (id_number))
    (expanded_value)))

================================================================================
Expanded row with caret attachment-cell field schema (SPEC 7.4.4a)
================================================================================

GCF profile=generic
## [1]{"id"}
@0 ^{"@x","a>b"}

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (field_name
        (quoted_string))))
  (expanded_item
    (local_id
      (id_number))
    (attachment_cell
      (field_decl
        (field_name
          (quoted_string))
        (field_name
          (quoted_string))))))

==================
Constant-column factoring (SPEC 7.4.7)
==================

GCF profile=generic
## [2]{id,region=us-east,n}
u1|1
u2|2

---

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (field_name)
      (constant_field
        (field_name)
        (const_value))
      (field_name)))
  (tabular_row)
  (tabular_row))

==================
Value-grouping header with @-key and group clause (SPEC 7.4.8)
==================

GCF profile=generic
## [2]{@id,dept,x} group=dept
dept=Sales [2]
u1|1
u2|1

---

(source_file
  (blank_line)
  (header
    (gcf_keyword)
    (header_pair
      (header_key)
      (header_value)))
  (section_header
    (count_bracket
      (count_number))
    (field_decl
      (identity_field
        (field_name))
      (field_name)
      (field_name))
    (group_clause
      (field_name)))
  (kv_line
    (kv_key)
    (kv_value))
  (tabular_row)
  (tabular_row))
